First cut to unify testing of rule firing